// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parse css url parse and replace 1`] = `
Object {
  "parsedUrls": Array [
    Url {
      "auth": null,
      "hash": null,
      "host": null,
      "hostname": null,
      "href": "one",
      "path": "one",
      "pathname": "one",
      "port": null,
      "protocol": null,
      "query": null,
      "search": null,
      "slashes": null,
    },
    Url {
      "auth": null,
      "hash": null,
      "host": null,
      "hostname": null,
      "href": "two",
      "path": "two",
      "pathname": "two",
      "port": null,
      "protocol": null,
      "query": null,
      "search": null,
      "slashes": null,
    },
    Url {
      "auth": null,
      "hash": null,
      "host": null,
      "hostname": null,
      "href": "three",
      "path": "three",
      "pathname": "three",
      "port": null,
      "protocol": null,
      "query": null,
      "search": null,
      "slashes": null,
    },
    Url {
      "auth": null,
      "hash": null,
      "host": null,
      "hostname": null,
      "href": "/five",
      "path": "/five",
      "pathname": "/five",
      "port": null,
      "protocol": null,
      "query": null,
      "search": null,
      "slashes": null,
    },
    Url {
      "auth": null,
      "hash": "#six",
      "host": null,
      "hostname": null,
      "href": "#six",
      "path": null,
      "pathname": null,
      "port": null,
      "protocol": null,
      "query": null,
      "search": null,
      "slashes": null,
    },
    Url {
      "auth": null,
      "hash": null,
      "host": null,
      "hostname": null,
      "href": "./some/path/1.svg",
      "path": "./some/path/1.svg",
      "pathname": "./some/path/1.svg",
      "port": null,
      "protocol": null,
      "query": null,
      "search": null,
      "slashes": null,
    },
    Url {
      "auth": null,
      "hash": null,
      "host": null,
      "hostname": null,
      "href": "./some/path/1.png",
      "path": "./some/path/1.png",
      "pathname": "./some/path/1.png",
      "port": null,
      "protocol": null,
      "query": null,
      "search": null,
      "slashes": null,
    },
    Url {
      "auth": null,
      "hash": "#some-hash",
      "host": null,
      "hostname": null,
      "href": "./some/path/1.png#some-hash",
      "path": "./some/path/1.png",
      "pathname": "./some/path/1.png",
      "port": null,
      "protocol": null,
      "query": null,
      "search": null,
      "slashes": null,
    },
    Url {
      "auth": null,
      "hash": null,
      "host": null,
      "hostname": null,
      "href": "./some/path/1.png?query=1",
      "path": "./some/path/1.png?query=1",
      "pathname": "./some/path/1.png",
      "port": null,
      "protocol": null,
      "query": "query=1",
      "search": "?query=1",
      "slashes": null,
    },
    Url {
      "auth": null,
      "hash": "#some-hash",
      "host": null,
      "hostname": null,
      "href": "some/path/1.png?query=2#some-hash",
      "path": "some/path/1.png?query=2",
      "pathname": "some/path/1.png",
      "port": null,
      "protocol": null,
      "query": "query=2",
      "search": "?query=2",
      "slashes": null,
    },
    Url {
      "auth": null,
      "hash": null,
      "host": null,
      "hostname": null,
      "href": "path/1.gif",
      "path": "path/1.gif",
      "pathname": "path/1.gif",
      "port": null,
      "protocol": null,
      "query": null,
      "search": null,
      "slashes": null,
    },
  ],
  "result": "url(\\"one\\"), url('two'), url(three), url(/five), url(#six), url(./some/replaced-path/1.svg), url(./some/replaced-path/1.png), url(./some/replaced-path/1.png#some-hash), url(./some/replaced-path/1.png?query=1), url('some/replaced-path/1.png?query=2#some-hash'), -filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='replaced-path/1.gif',sizingMethod=scale);",
  "resultUrls": Array [
    Url {
      "auth": null,
      "hash": null,
      "host": null,
      "hostname": null,
      "href": "one",
      "path": "one",
      "pathname": "one",
      "port": null,
      "protocol": null,
      "query": null,
      "search": null,
      "slashes": null,
    },
    Url {
      "auth": null,
      "hash": null,
      "host": null,
      "hostname": null,
      "href": "two",
      "path": "two",
      "pathname": "two",
      "port": null,
      "protocol": null,
      "query": null,
      "search": null,
      "slashes": null,
    },
    Url {
      "auth": null,
      "hash": null,
      "host": null,
      "hostname": null,
      "href": "three",
      "path": "three",
      "pathname": "three",
      "port": null,
      "protocol": null,
      "query": null,
      "search": null,
      "slashes": null,
    },
    Url {
      "auth": null,
      "hash": null,
      "host": null,
      "hostname": null,
      "href": "/five",
      "path": "/five",
      "pathname": "/five",
      "port": null,
      "protocol": null,
      "query": null,
      "search": null,
      "slashes": null,
    },
    Url {
      "auth": null,
      "hash": "#six",
      "host": null,
      "hostname": null,
      "href": "#six",
      "path": null,
      "pathname": null,
      "port": null,
      "protocol": null,
      "query": null,
      "search": null,
      "slashes": null,
    },
    Url {
      "auth": null,
      "hash": null,
      "host": null,
      "hostname": null,
      "href": "./some/replaced-path/1.svg",
      "path": "./some/replaced-path/1.svg",
      "pathname": "./some/replaced-path/1.svg",
      "port": null,
      "protocol": null,
      "query": null,
      "search": null,
      "slashes": null,
    },
    Url {
      "auth": null,
      "hash": null,
      "host": null,
      "hostname": null,
      "href": "./some/replaced-path/1.png",
      "path": "./some/replaced-path/1.png",
      "pathname": "./some/replaced-path/1.png",
      "port": null,
      "protocol": null,
      "query": null,
      "search": null,
      "slashes": null,
    },
    Url {
      "auth": null,
      "hash": "#some-hash",
      "host": null,
      "hostname": null,
      "href": "./some/replaced-path/1.png#some-hash",
      "path": "./some/replaced-path/1.png",
      "pathname": "./some/replaced-path/1.png",
      "port": null,
      "protocol": null,
      "query": null,
      "search": null,
      "slashes": null,
    },
    Url {
      "auth": null,
      "hash": null,
      "host": null,
      "hostname": null,
      "href": "./some/replaced-path/1.png?query=1",
      "path": "./some/replaced-path/1.png?query=1",
      "pathname": "./some/replaced-path/1.png",
      "port": null,
      "protocol": null,
      "query": "query=1",
      "search": "?query=1",
      "slashes": null,
    },
    Url {
      "auth": null,
      "hash": "#some-hash",
      "host": null,
      "hostname": null,
      "href": "some/replaced-path/1.png?query=2#some-hash",
      "path": "some/replaced-path/1.png?query=2",
      "pathname": "some/replaced-path/1.png",
      "port": null,
      "protocol": null,
      "query": "query=2",
      "search": "?query=2",
      "slashes": null,
    },
    Url {
      "auth": null,
      "hash": null,
      "host": null,
      "hostname": null,
      "href": "replaced-path/1.gif",
      "path": "replaced-path/1.gif",
      "pathname": "replaced-path/1.gif",
      "port": null,
      "protocol": null,
      "query": null,
      "search": null,
      "slashes": null,
    },
  ],
}
`;

exports[`parse css url parse base 1`] = `
Array [
  Url {
    "auth": null,
    "hash": null,
    "host": null,
    "hostname": null,
    "href": "one",
    "path": "one",
    "pathname": "one",
    "port": null,
    "protocol": null,
    "query": null,
    "search": null,
    "slashes": null,
  },
  Url {
    "auth": null,
    "hash": null,
    "host": null,
    "hostname": null,
    "href": "two",
    "path": "two",
    "pathname": "two",
    "port": null,
    "protocol": null,
    "query": null,
    "search": null,
    "slashes": null,
  },
  Url {
    "auth": null,
    "hash": null,
    "host": null,
    "hostname": null,
    "href": "three",
    "path": "three",
    "pathname": "three",
    "port": null,
    "protocol": null,
    "query": null,
    "search": null,
    "slashes": null,
  },
  Url {
    "auth": null,
    "hash": null,
    "host": null,
    "hostname": null,
    "href": "/five",
    "path": "/five",
    "pathname": "/five",
    "port": null,
    "protocol": null,
    "query": null,
    "search": null,
    "slashes": null,
  },
  Url {
    "auth": null,
    "hash": "#six",
    "host": null,
    "hostname": null,
    "href": "#six",
    "path": null,
    "pathname": null,
    "port": null,
    "protocol": null,
    "query": null,
    "search": null,
    "slashes": null,
  },
  Url {
    "auth": null,
    "hash": null,
    "host": null,
    "hostname": null,
    "href": "./some/path/1.svg",
    "path": "./some/path/1.svg",
    "pathname": "./some/path/1.svg",
    "port": null,
    "protocol": null,
    "query": null,
    "search": null,
    "slashes": null,
  },
  Url {
    "auth": null,
    "hash": null,
    "host": null,
    "hostname": null,
    "href": "./some/path/1.png",
    "path": "./some/path/1.png",
    "pathname": "./some/path/1.png",
    "port": null,
    "protocol": null,
    "query": null,
    "search": null,
    "slashes": null,
  },
  Url {
    "auth": null,
    "hash": "#some-hash",
    "host": null,
    "hostname": null,
    "href": "./some/path/1.png#some-hash",
    "path": "./some/path/1.png",
    "pathname": "./some/path/1.png",
    "port": null,
    "protocol": null,
    "query": null,
    "search": null,
    "slashes": null,
  },
  Url {
    "auth": null,
    "hash": null,
    "host": null,
    "hostname": null,
    "href": "./some/path/1.png?query=1",
    "path": "./some/path/1.png?query=1",
    "pathname": "./some/path/1.png",
    "port": null,
    "protocol": null,
    "query": "query=1",
    "search": "?query=1",
    "slashes": null,
  },
  Url {
    "auth": null,
    "hash": "#some-hash",
    "host": null,
    "hostname": null,
    "href": "some/path/1.png?query=2#some-hash",
    "path": "some/path/1.png?query=2",
    "pathname": "some/path/1.png",
    "port": null,
    "protocol": null,
    "query": "query=2",
    "search": "?query=2",
    "slashes": null,
  },
  Url {
    "auth": null,
    "hash": null,
    "host": null,
    "hostname": null,
    "href": "path/1.gif",
    "path": "path/1.gif",
    "pathname": "path/1.gif",
    "port": null,
    "protocol": null,
    "query": null,
    "search": null,
    "slashes": null,
  },
]
`;

exports[`parse css url replace base 1`] = `"url(\\"one\\"), url('two'), url(three), url(/five), url(#six), url(./some/replaced-path/1.svg), url(./some/replaced-path/1.png), url(./some/replaced-path/1.png#some-hash), url(./some/replaced-path/1.png?query=1), url('some/replaced-path/1.png?query=2#some-hash'), -filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='replaced-path/1.gif',sizingMethod=scale);"`;
